added links to go back

--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,8 @@
 <!doctype html> 
 <html> 
 <body> 
-	<h1> {{ prediction }}</h1> 
+	<h1> {{ prediction }}</h1></br></br>
+	<a href="/">GO BAck</a>
+
 </body> 
 </html> 
